[gd_scene load_steps=5 format=2]

[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Audio/gameover.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.533
margin_top = -57.5847
margin_right = -2.53271
margin_bottom = 14.4153
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.796078, 0, 0, 1 )
meta_underlined = false
text = "Game Over"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -58.0
margin_right = 12.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.537255, 0, 0.729412, 1 )
meta_underlined = false
text = "Jumper"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -64.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
meta_underlined = false
text = "0000"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -114.295
margin_top = -65.9756
margin_right = -2.29523
margin_bottom = -1.97559
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
meta_underlined = false
text = "0000"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="GameOverAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
